[package]
name = "us_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.3", features = ["cargo", "derive"]}
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11.12"
